--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,19 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <style>
+      body{
+        background-color: aqua;
+        margin: 0 auto;
+      }
+      #root{
+        width: 100%;
+        height: 80%;
+        border: 1px solid green;
+        display: flex;
+        justify-content: center;
+      }
+    </style>
     <title>React App</title>
   </head>
   <body>
