--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
       }
       #root{
         width: 100%;
-        height: 80%;
+        height: 100%;
         border: 1px solid green;
         display: flex;
         justify-content: center;
@@ -41,7 +41,12 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+
+      <div id="root">
+
+      </div>
+    
+    
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
